--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,78 @@
+:root {
+  --color-primary: #ff8b37;
+  --color-primary-light: #fff3eb;
+  --color-primary-dark: #e87928;
+  --color-text: #1c1c21;
+  --color-btn-text: #ffffff;
+  --color-btn: var(--color-primary);
+  --color-btn-active: var(--color-primary-dark);
+  --color-btn-hover: #ffac70;
+  --color-success: #47d867;
+  --color-success-light: #e6faea;
+  --color-error: #ec6259;
+  --color-error-light: #fdeeed;
+  --color-inactive: #d0d0d8;
+  --color-inactive-light: #f5f5f7;
+  --color-light: #ffffff;
+  --font-family: 'Inter', sans-serif;
+  --font-weight-regular: 400;
+  --font-weight-bold: 600;
+  --transition: all 300ms ease;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 10px;
+}
+
+html,
+body {
+  width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+
 body {
   margin: 0;
+  color: var(--color-text);
+  font-family: var(--font-family);
+  font-size: 1.6rem;
+  font-weight: var(--font-weight-regular);
+  min-width: 320px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+  min-height: 100vh;
+}
+
+h1 {
+  margin: 0;
+  font-size: 5.6rem;
+  line-height: 6.5rem;
+}
+
+h4 {
+  margin: 0;
+  font-size: 3.2rem;
+  line-height: 3.7rem;
+}
+
+@media (max-width: 768px) {
+  html {
+    font-size: 5.75px;
+  }
+}
+
+@media (min-width: 640px) {
+}
+@media (min-width: 768px) {
+}
+@media (min-width: 1024px) {
+}
+@media (min-width: 1280px) {
 }
